--- a/presidio-integrated-api/templates/index.html
+++ b/presidio-integrated-api/templates/index.html
@@ -34,6 +34,12 @@
             color: red;
             font-weight: bold;
         }
+        .log {
+            background-color: #f0f0f0;
+            border: 1px solid #ddd;
+            padding: 10px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -74,6 +80,13 @@
         <pre>{{ result.gpt4_analysis }}</pre>
         {% endif %}
     </div>
+
+    {% if result.logs %}
+    <div class="log">
+        <h3>Processing Logs:</h3>
+        <pre>{{ result.logs }}</pre>
+    </div>
+    {% endif %}
     {% endif %}
 </body>
 </html>
