Added recommendataion in the UI

--- a/presidio-integrated-api/templates/index.html
+++ b/presidio-integrated-api/templates/index.html
@@ -78,6 +78,9 @@
 
         <h3>GPT-4 Analysis:</h3>
         <pre>{{ result.gpt4_analysis }}</pre>
+
+        <h3>GPT-4 Recommendations:</h3>
+        <pre>{{ result.gpt4_recommendations }}</pre>
         {% endif %}
     </div>
 
